[Chromium] moving a cursor on a misspelled word should not remove a misspelled underline https://bugs.webkit.org/show_bug.cgi?id=83214

Reviewed by Ryosuke Niwa.

When Chrome enables asynchronous spellchecking, it adds Spelling markers in the
background. For this case, moving a cursor should not remove these markers
because it requires Chrome to spellcheck text again. This change prevents
removing Spelling markers added by spellcheckers asynchronously.

Source/WebCore:

Test: platform/chromium/editing/spelling/move-cursor-to-misspelled-word.html

* editing/Editor.cpp:
(WebCore::Editor::respondToChangedSelection):

Source/WebKit/chromium:

* src/ContextMenuClientImpl.cpp:
(WebKit::ContextMenuClientImpl::getCustomMenuFromDefaultItems): use marker descriptions instead of spellchecking text when Chrome enables asynchronous spellchecking.

LayoutTests:

* platform/chromium/editing/spelling/move-cursor-to-misspelled-word-expected.txt: Added.
* platform/chromium/editing/spelling/move-cursor-to-misspelled-word.html: Added.


Canonical link: https://commits.webkit.org/100735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113405 268f45cc-cd09-0410-ab3c-d52691b4dbfc